tests/fixtures/invalid/parse_errors/unclosed_list.luma
-- Unclosed list
let items = [1, 2, 3
